@@ -10,8 +10,8 @@ DIST linux-2.6.34.tar.bz2 67633622 RMD160 dafd721b00c13e3652405b517b379eed10020b
 DIST patch-2.6.32.22.bz2 602391 RMD160 1f3b8cbac32a5833d98e89e0f2e7a4cd24fe4996 SHA1 bc2239222fc61e45404bb9db41e9e6e51594a6a1 SHA256 9f04a819a6ae1ac9a4793ce229bc9a2cb095ac10a2d46955ec1e6769283c4de4
 DIST patch-2.6.34.6.bz2 185209 RMD160 75c9a569f8c80be7c418b75f7cde444fcc0a70ff SHA1 e033e2bc4b46e7cc8ee19c07b5ad6999b4c2a52d SHA256 a62e9392ad435948ea4ea2cce12e60e042da6e6da806691936ba50bbaa0dc8cc
 DIST patch-2.6.34.7.bz2 184957 RMD160 0f72e9496ff0082df05424ec75aff166ba6dff27 SHA1 b346d804a428239145b6c058ff0df88792c31094 SHA256 b146904ea07cc87a3fbcbd4eab51d331d56718431539e6aa29c24b072e6b7832
-EBUILD calculate-sources-2.6.32.22.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+EBUILD calculate-sources-2.6.32.22-r1.ebuild 746 RMD160 e7683435e0f449453c016be2e3888ebb81372cb1 SHA1 19a3aa25464ed50bdeaeed66bd924a1e745746c8 SHA256 96f403498be3196cff45c515b37db834095bd1166916e2889a75d9e492c9cdf3
 EBUILD calculate-sources-2.6.34.6.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
 EBUILD calculate-sources-2.6.34.7.ebuild 732 RMD160 4eb92daf4c535ce529c8930847f4503bd4431617 SHA1 5aeeff74e73d173257844c4a3ebfea11fc87f69d SHA256 b584166d290c6738947dee840e678ea00821d33892402643dffa8a7f88610880
-MISC ChangeLog 2822 RMD160 7e0b4a1629859268ba6464c1969eaab210a15074 SHA1 bd69144d84ed618b7de396323c289372f851743e SHA256 33502c1c534f7fd6c23277f5ab92e75844b73ea5e8cb65c6ad3e192fd3719c64
+MISC ChangeLog 3072 RMD160 311bfe9c6bac1d2d7ed0b51808a2a7c1e93a68c5 SHA1 abfe12427d40051242b46420e9f02c983a377ce0 SHA256 eeaaea4a8f807b2ee63110d3acdfd8e05e623b06d76d0b46019cd1759eafbf84
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
