@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.32.22-r1 (22 Sep 2010)
+
+  22 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-sources-2.6.32.22.ebuild,
+  +calculate-sources-2.6.32.22-r1.ebuild:
+  Change eclass to calculate-kernel-old for kernel building.
+
 *calculate-sources-2.6.34.6 (21 Sep 2010)
 
   21 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
